--- a/style.scss
+++ b/style.scss
@@ -1,34 +1,28 @@
-// Fonts
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400;500;600;700;800;900&family=Questrial&family=Quicksand:wght@300;400;500;600;700&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&display=swap");
-
 // Tailwind
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 // * {
-//   font-family: "Inter", sans-serif;
+//   font-family: "Inter"
 // }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-family: "Space Grotesk", sans-serif;
-}
+// h1,
+// h2,
+// h3,
+// h4,
+// h5,
+// h6 {
+//   font-family: var(--font-space-grotesk) sans-serif;
+// }
 
 pre * {
-  font-family: "Source Code Pro", monospace !important;
+  @apply font-mono;
   font-size: 0.825rem;
 }
 
 code {
-  font-family: "Source Code Pro", sans-serif;
+  @apply font-mono;
 }
 
 a:focus-visible {
